--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,7 @@
   "author": "Karthikeyan",
   "license": "ISC",
   "dependencies": {
+    "@auth/express": "^0.5.5",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -18,6 +19,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongoose": "^8.2.2",
+    "next-auth": "^5.0.0-beta.18",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "twilio": "^5.0.1"
