--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,17 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth/express": "^0.5.5",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
     "dotenv": "^16.4.5",
+    "next-auth": "^5.0.0-beta.18",
     "nodemailer": "^6.9.13",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
-    "twilio": "^5.0.1"
+    "react-hook-form": "^7.51.4",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
