--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
+    "chalk": "^5.3.0",
     "chart.js": "^4.4.2",
     "dotenv": "^16.4.5",
     "next-auth": "^5.0.0-beta.18",
